--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -124,6 +124,28 @@ and open the template in the editor.
         margin-top: 1.5rem !important;
         margin-bottom: 1.5rem !important;
     }
+    .card-body {
+        padding: .75rem;
+    }
+}
+@media (max-width: 576px) {
+    #introCarousel h1 {
+        font-size: 1.2rem;
+        margin-top: 2rem;
+    }
+    #introCarousel .btn {
+        font-size: .8rem;
+    }
+    .agr-card-line {
+        font-size: .8rem;
+    }
+    .agr-card-button {
+        font-size: .8rem;
+        padding: .25rem .7rem .25rem .7rem;
+    }
+    .card-body {
+        padding: .5rem;
+    }
 }
 #agr-quick-search-container-desktop {
     width: 270px;
