--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -40,19 +40,19 @@ and open the template in the editor.
 }
 
 #introCarousel .carousel-item:nth-child(1) {
-    background-image: url('/assets/img/intro/catalog.jpg');
+    background-image: url('/assets/img/intro/catalog.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 #introCarousel .carousel-item:nth-child(2) {
-    background-image: url('/assets/img/intro/discount.jpg');
+    background-image: url('/assets/img/intro/discount.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 #introCarousel .carousel-item:nth-child(3) {
-    background-image: url('/assets/img/intro/delivery.jpg');
+    background-image: url('/assets/img/intro/delivery.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
