--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -242,6 +242,13 @@ and open the template in the editor.
 #footer {
     background-color: var(--agr-background-color) !important;
 }
+.agr-shop-address-link {
+    white-space: pre;
+    color: white;
+}
+.agr-shop-address-link:hover {
+    color: lightgray;
+}
 /** ============================================== RIBBON ============================================================================== */
 .ribbon {
     z-index: 500;
