--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -184,6 +184,13 @@ and open the template in the editor.
     height: 0;
     padding-top: 100%;
 }
+.agr-photo-full {
+    width: 100%; 
+    height: 50vh; 
+    background-repeat: no-repeat; 
+    background-position: center center;
+    background-size: contain;
+}
 .agr-cart-badge {
     position: absolute !important;
     top: -12px !important;
