--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -140,8 +140,8 @@ and open the template in the editor.
         font-size: .8rem;
     }
     .agr-card-button {
-        font-size: .8rem;
-        padding: .25rem .7rem .25rem .7rem;
+        font-size: 1rem;
+        padding: .5rem .7rem .55rem .7rem;
     }
     .card-body {
         padding: .5rem;
