--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -10,8 +10,8 @@ and open the template in the editor.
 :root {
     --agr-background-color: #000000ba;
     --agr-bs-purple-dark: #563296;
-    --swiper-pagination-color: #563296;
-    --swiper-navigation-color: #563296;
+    --swiper-pagination-color: whitesmoke;
+    --swiper-navigation-color: white;
 }
 .dropdown-toggle:after  {
     float: right;
@@ -260,9 +260,6 @@ and open the template in the editor.
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-.agr-btn-close-modal-white {
-    background: transparent url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='white' d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3E%3C/svg%3E") 50%/1em auto no-repeat;
 }
 .leaflet-control-attribution.leaflet-control {
     display: none;
