--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -85,6 +85,10 @@ and open the template in the editor.
     .agr-menu-sidebar {
         width: 450px;
     }
+    .agr-nav-back-btn {
+        left: auto !important;
+        right: 10px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -146,6 +150,10 @@ and open the template in the editor.
         position: fixed;
         left: 0;
         right: 0;
+    }
+    .agr-nav-back-btn {
+        top: auto !important;
+        bottom: 10px !important;
     }
 }
 @media (max-width: 576px) {
@@ -439,7 +447,7 @@ and open the template in the editor.
         transform: translateX(0%);
     }
 }
-.agr-desktop-menu-btn {
+.agr-desktop-menu-btn, .agr-nav-back-btn {
     position: fixed;
     display: flex; 
     justify-content: center; 
@@ -455,7 +463,7 @@ and open the template in the editor.
     color: white; 
     z-index: 5000;
 }
-.agr-desktop-menu-btn:hover {
+.agr-desktop-menu-btn:hover, .agr-nav-back-btn:hover {
     cursor: pointer;
 }
 .agr-menu-catalog-group-link:hover {
