--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -245,6 +245,7 @@ and open the template in the editor.
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 120px;
+    max-height: 120px;
 }
 .agr-quantity {
     line-height: 0.7rem;
