Feature/agrolavka tests (#9)
* Lombok

* Checkstyle

* Checkstyle

* Test profile

* Test profile

* Agrolavka MVC test

* Agrolavka MVC test

* Format code

* Unit test

* Suppress warnings

* Web components

* Web components

* Rollback

* Menu item component

* Menu item component

* Menu item component

* Menu item component

* Menu item component

* Sidemenu style

* Font awesome as static resources

* Update versions

---------

Co-authored-by: alex <alex@sonya>

--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -369,9 +369,6 @@ and open the template in the editor.
 .agr-mobile-menu-separator {
     border-top: 2px solid #dedede !important;
 }
-.agr-mobile-menu-back-button {
-    background-color: lightgray;
-}
 .agr-mobile-menu-back-button:hover {
     cursor: pointer;
 }
@@ -401,6 +398,9 @@ and open the template in the editor.
         inset 0px 11px 8px -10px #CCC,
         inset 0px -11px 8px -10px #CCC;
     flex: 1;
+}
+.agr-scrollable-list-group {
+    padding: 10px 0px 10px 0px;
 }
 .agr-mobile-menu-slide.active {
     display: flex;
@@ -467,7 +467,7 @@ and open the template in the editor.
 .agr-menu-catalog-group-link:hover {
     cursor: pointer;
 }
-.agr-menu-item-top-category {
+.agr-menu-item-top-category span {
     font-weight: 800;
     color: var(--agr-bs-purple-dark);
 }
@@ -586,4 +586,7 @@ and open the template in the editor.
 .btn-outline-primary.active {
     border-color: var(--bs-purple);
     color: var(--bs-purple);
+}
+.text-primary {
+    color: var(--agr-bs-purple-dark) !important;
 }
