--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -590,3 +590,7 @@ and open the template in the editor.
 .text-primary {
     color: var(--agr-bs-purple-dark) !important;
 }
+.bg-gray {
+    background-color: #6c757d !important;
+    color: white !important;
+}
