--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -478,6 +478,24 @@ and open the template in the editor.
 .agr-menu-item-higlight {
     color: var(--agr-bs-purple-dark);
 }
+.agr-carrot-logo {
+    animation-name: logo-animation;
+    animation-delay: 0ms;
+    animation-duration: .5s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+@keyframes logo-animation {
+    0% {
+        transform: scale(0);
+    }
+    80% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 /** ============================================== RIBBON ============================================================================== */
 .ribbon {
     z-index: 500;
