--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -479,8 +479,8 @@ and open the template in the editor.
     color: var(--agr-bs-purple-dark);
 }
 .agr-carrot-logo {
+    animation-delay: 0s;
     animation-name: logo-animation;
-    animation-delay: 0ms;
     animation-duration: .5s;
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
@@ -494,6 +494,39 @@ and open the template in the editor.
     }
     100% {
         transform: scale(1);
+    }
+}
+.fa-phone-alt {
+    animation-delay: 5s;
+    animation-name: phone-animation;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes phone-animation {
+    0% {
+        transform: rotate(10deg) scale(1.2);
+    }
+    1% {
+        transform: rotate(-10deg) scale(1.2);
+    }
+    2% {
+        transform: rotate(10deg) scale(1.3);
+    }
+    3% {
+        transform: rotate(-10deg) scale(1.3);
+    }
+    4% {
+        transform: rotate(10deg) scale(1.2);
+    }
+    5% {
+        transform: rotate(-10deg) scale(1.2);
+    }
+    6% {
+        transform: rotate(0deg) scale(1.0);
+    }
+    100% {
+        transform: rotate(0deg) scale(1.0);
     }
 }
 /** ============================================== RIBBON ============================================================================== */
