--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -478,6 +478,57 @@ and open the template in the editor.
 .agr-menu-item-higlight {
     color: var(--agr-bs-purple-dark);
 }
+.agr-carrot-logo {
+    animation-delay: 0s;
+    animation-name: logo-animation;
+    animation-duration: .5s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+@keyframes logo-animation {
+    0% {
+        transform: scale(0);
+    }
+    80% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+.fa-phone-alt {
+    animation-delay: 5s;
+    animation-name: phone-animation;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes phone-animation {
+    0% {
+        transform: rotate(10deg) scale(1.2);
+    }
+    1% {
+        transform: rotate(-10deg) scale(1.2);
+    }
+    2% {
+        transform: rotate(10deg) scale(1.3);
+    }
+    3% {
+        transform: rotate(-10deg) scale(1.3);
+    }
+    4% {
+        transform: rotate(10deg) scale(1.2);
+    }
+    5% {
+        transform: rotate(-10deg) scale(1.2);
+    }
+    6% {
+        transform: rotate(0deg) scale(1.0);
+    }
+    100% {
+        transform: rotate(0deg) scale(1.0);
+    }
+}
 /** ============================================== RIBBON ============================================================================== */
 .ribbon {
     z-index: 500;
