--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -197,6 +197,17 @@ and open the template in the editor.
     border-color: white;
     box-shadow: 0 0 0 3px rgb(121 82 179 / 25%);
 }
+.agr-viber {
+    background: #7c529d;
+    width: 32px;
+    height: 32px;
+    border-radius: 25%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
 .agr-card-image {
     display: block;
     background-size: cover;
