--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -540,6 +540,9 @@ and open the template in the editor.
         transform: rotate(0deg) scale(1.0);
     }
 }
+.agr-variant-btn.btn-outline-primary {
+    color: var(--agr-bs-purple-dark);
+}
 /** ============================================== RIBBON ============================================================================== */
 .ribbon {
     z-index: 500;
