--- a/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
+++ b/module/app/agrolavka/src/main/resources/static/assets/css/style-mb.css
@@ -86,6 +86,9 @@ and open the template in the editor.
     .agr-menu-sidebar {
         width: 450px;
     }
+    .agr-card-placeholder {
+        max-width: 303px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -147,6 +150,9 @@ and open the template in the editor.
         position: fixed;
         left: 0;
         right: 0;
+    }
+    .agr-card-placeholder {
+        max-width: 175px;
     }
 }
 @media (max-width: 576px) {
